[package]
name = "libraft-mem"
version = "0.0.1"
authors = ["owent <admin@owent.net>"]
readme = "README.md"
description = "Raft library implement for memory usage."
homepage = "https://crates.io/crates/libraft-mem"
documentation = "https://github.com/owt5008137/libraft-mem"
repository = "https://github.com/owt5008137/libraft-mem"
keywords = ["raft", "memory"]
categories = ["algorithms", "database-implementations"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["proto"]

[features]
default = ["default-logger"]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

[dependencies]
libraft-mem-proto = { path = "proto", version = "0.1.0", default-features = false }
protobuf = "^2.8"
slog = "^2.5"
slog-stdlog = { version = "^4", optional = true }
slog-envlogger = { version = "^2.2", optional = true }
slog-term = { version = "^2.4", optional = true }

[dev-dependencies]
criterion = "^0.3.0"
regex = "^1.3"
slog-stdlog = "^4"
slog-envlogger = "^2.2"
slog-async = "^2.3"
slog-term = "^2.4"

#[build-dependencies]
#bindgen = "^0.52.0"

# [lib]
# name = "libraft-mem-a"
# crate-type = ["staticlib"]
# 
# [lib]
# name = "libraft-mem"
# crate-type = ["cdylib"]

# [badges]
# travis-ci = { repository = "owt5008137/libraft-mem" }

[[bench]]
name = "benches"
harness = false


[[example]]
name = "quick-start"
path = "examples/quick-start/main.rs"

