[package]
name = "libraft-mem-proto"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
readme = "README.md"
description = "Raft protocol files for libraft-mem."
homepage = "https://crates.io/crates/libraft-mem"
documentation = "https://github.com/owt5008137/libraft-mem"
repository = "https://github.com/owt5008137/libraft-mem"
keywords = ["raft", "memory"]
categories = ["algorithms", "database-implementations"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
protobuf-codegen-pure = { version = "2" }

[dependencies]
bytes = { version = "^0.5", optional = true }
lazy_static = { version = "^1.4.0", optional = true }
protobuf = { version = "2", features = ["with-bytes"] }

